force-app/main/default/objects/ReturnOrderLineItem/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <inlineHelpText>Batch number of the returned goods, if readable on the package.</inlineHelpText>
    <label>Batch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>