force-app/main/default/objects/ReturnOrderLineItem/fields/BestBeforeDate__c.field-meta.xml
<CustomField>
    <fullName>BestBeforeDate__c</fullName>
    <inlineHelpText>Best-before date of the returned goods.</inlineHelpText>
    <label>Best Before Date</label>
    <type>Date</type>
</CustomField>