force-app/main/default/objects/ReturnOrderLineItem/fields/CreditIssuance__c.field-meta.xml
<CustomField>
    <fullName>CreditIssuance__c</fullName>
    <inlineHelpText>Decides for this line whether money flows back. This entry overrides the default on the header.</inlineHelpText>
    <label>Credit Issuance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WITH</fullName>
                <label>With credit</label>
            </value>
            <value>
                <fullName>WITHOUT</fullName>
                <label>Without credit</label>
            </value>
            <value>
                <fullName>Z0RL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>