force-app/main/default/objects/ReturnOrderLineItem/fields/ERPLastSyncAt__c.field-meta.xml
<CustomField>
    <fullName>ERPLastSyncAt__c</fullName>
    <inlineHelpText>Time of the last feedback for this line.</inlineHelpText>
    <label>ERP Last Sync At</label>
    <type>DateTime</type>
</CustomField>