force-app/main/default/objects/ReturnOrderLineItem/fields/ERPPositionNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPPositionNumber__c</fullName>
    <inlineHelpText>Item number in the SAP document. Set by the integration.</inlineHelpText>
    <label>ERP Position Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>