force-app/main/default/objects/ReturnOrderLineItem/fields/ReturnReason__c.field-meta.xml
<CustomField>
    <fullName>ReturnReason__c</fullName>
    <inlineHelpText>Why this line comes back. The key is passed on unchanged.</inlineHelpText>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R04</fullName>
            </value>
            <value>
                <fullName>R07</fullName>
            </value>
            <value>
                <fullName>R13</fullName>
            </value>
            <value>
                <fullName>R14</fullName>
            </value>
            <value>
                <fullName>R16</fullName>
            </value>
            <value>
                <fullName>R19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>