force-app/main/default/objects/ReturnOrderLineItem/fields/ShipmentItem__c.field-meta.xml
<CustomField>
    <fullName>ShipmentItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Item</label>
    <referenceTo>ShipmentItem</referenceTo>
    <relationshipLabel>Return Order Line Items</relationshipLabel>
    <relationshipName>ShipmentItem</relationshipName>
    <type>Lookup</type>
</CustomField>