force-app/main/default/objects/ReturnOrderLineItem/validationRules/ReturnOrderLineItemQuantityAndCreditRequ.validationRule-meta.xml
<ValidationRule>
    <fullName>ReturnOrderLineItemQuantityAndCreditRequ</fullName>
    <active>true</active>
    <description>Every line needs a quantity greater than zero and a credit decision.</description>
    <errorConditionFormula>OR(
  ISBLANK( QuantityExpected ),
  QuantityExpected &lt;= 0,
  ISPICKVAL( CreditIssuance__c , &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Enter a quantity greater than zero and state whether this line is returned with or without credit.</errorMessage>
</ValidationRule>